# first-light-mod-manager

./: .gitignore  AGENTS.md  LICENSE  README.md  package-lock.json  package.json  playwright.config.js
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
Builds/: First Light Mod Manager_0.1.0_x64_en-US.msi
docs/codebase/: .codebase-scan.txt  ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
scripts/: report-coverage.mjs  sync-version.mjs  tauri.ps1
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: backup.rs  commands.rs  crypto.rs  game_detect.rs  lib.rs  mod_manager.rs  settings.rs
tests/e2e/: app.spec.js
tests/unit/: utils.spec.js
