[package]
name = "first-light-mod-manager"
version = "0.1.0"
description = "First Light Mod Manager — Gerenciador de mods para 007: First Light"
authors = ["Open Source"]
edition = "2021"

[lib]
name = "first_light_mod_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winreg = "0.52"
tokio = { version = "1", features = ["full"] }
fs_extra = "1.3"
zip = "2"
